kubernetes/ingress/tomcat-deploy.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: "tomcat:9.0-alpine"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
