kubernetes/ingress/traefik-deploy.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:1.7.6-alpine
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=info
        - --metrics.prometheus
        - --defaultentrypoints=http,https
        - --entrypoints=Name:https Address::443 TLS Compress:true
        - --entrypoints=Name:http Address::80 Compress:true
        #- --acme=true
        #- --acme.entrypoint=https
        #- --acme.httpchallenge
        #- --acme.httpchallenge.entrypoint=http
        #- --acme.domains=www.hostynskaosma.cz
        #- --acme.domains=traefik.mydomain.com
        #- --acme.email=admin@osomahe.net
        #- --acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory
        #- --acme.storage=/data/acme.json
