kubernetes/ingress/tomcat-service.yml
kind: Service
apiVersion: v1
metadata:
  name: tomcat
spec:
  selector:
    app: tomcat
  ports:
  - name: http
    port: 8080
    targetPort: 8080
